# irods_training

advanced/hpc_compute_to_data/: CMakeLists.txt  compute_to_data_support.py
advanced/hpc_compute_to_data/msvc__msiregister_as_admin/: CMakeLists.txt
advanced/hpc_compute_to_data/msvc__msiregister_as_admin/src/: lib-microservice-register_as_admin.cpp
advanced/hpc_data_to_compute/: CMakeLists.txt  spawn_remote_slurm_jobs.r
advanced/hpc_data_to_compute/compute/: irods_compute_functions
advanced/irods_rule_engine_plugin_storage_balancing/: CMakeLists.txt  rule_engine_plugin.cmake
advanced/irods_rule_engine_plugin_storage_balancing/src/: libirods_rule_engine_plugin-cpp-storage-balancing.cpp
beginner/: irods_beginner_training_2024.tex  irods_beginner_training_2025.tex
